added different topics
update includes:
- added sprites and throw-animation,
- added font-family,
- added Chronicle in guide modal,
- added carousel in guide modal to show all characters in the game

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ assets/img/background/**/*.png
 assets/img/character/**/*.png
 assets/img/monsters/**/*.png
 assets/img/ornaments/**/*.png
+assets/img/carousel/**/*.png
