updated start screen

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ assets/img/character/**/*.png
 assets/img/monsters/**/*.png
 assets/img/ornaments/**/*.png
 assets/img/carousel/**/*.png
+assets/img/main/**/*.png
+assets/img/main/**/*.svg
